# books

./: .gitignore  .gitmodules  README.md
BinaryAnalysis/: CMakeLists.txt
DesignPattern/: CMakeLists.txt  LICENSE  README.md
DesignPattern/cmake/: utility.cmake
DesignPattern/src/: CMakeLists.txt
DesignPattern/src/01_Iterator/: CMakeLists.txt  aggregate.hpp  book.hpp  iterator.hpp  test_iterator.cpp
DesignPattern/src/02_Adapter/: CMakeLists.txt  banner.hpp  file_io.hpp  file_property.hpp  print.hpp  print_banner.hpp  property.hpp  test_adapter_01.cpp  test_adapter_02.cpp  test_adapter_03.cpp
DesignPattern/src/03_TemplateMethod/: CMakeLists.txt  abstract_display.hpp  char_display.hpp  string_display.hpp  test_template0.cpp
DesignPattern/src/04_FactoryMethod/: CMakeLists.txt  factory.hpp  idcard.hpp  idcard_factory.hpp  product.hpp  test_factory_method.cpp
DesignPattern/src/05_Singleton/: CMakeLists.txt  singleton.hpp  test_singleton.cpp  test_singleton1.cpp  test_singleton2.cpp  tickmaker.hpp  triple_singleton.hpp
DesignPattern/src/06_Prototype/: CMakeLists.txt  manager.hpp  message_box.hpp  product.hpp  test_prototype.cpp  underline_pen.hpp
DesignPattern/src/07_Builder/: CMakeLists.txt  Director.hpp  builder.hpp  html_builder.cpp  html_builder.hpp  test_builder.cpp  text_builder.cpp  text_builder.hpp
DesignPattern/src/08_AbstractFactory/: CMakeLists.txt  test_abstract_factory.cpp
DesignPattern/src/08_AbstractFactory/factory/: factory.hpp  item.hpp  link.hpp  page.hpp  tray.hpp
DesignPattern/src/08_AbstractFactory/listfactory/: listfactory.hpp  listlink.hpp  listpage.hpp  listtray.hpp
DesignPattern/src/09_Bridge/: CMakeLists.txt  count_display.hpp  display.hpp  display_impl.hpp  string_display_impl.hpp  test_display.cpp
DesignPattern/src/10_Strategy/: CMakeLists.txt  hand.hpp  player.hpp  prob_strategy.hpp  strategy.hpp  test_strategy.cpp  winning_strategy.hpp
ExpertPythonProgramming/: setup.cfg  setup.py
MikanOS/: .ccls  .dir-locals.el  .gitignore  Dockerfile  docker-compose.yml
PythonMachineLearning/: neuralnet.py
PythonReinforcementLearning/: setup.py
ROS2/: .gitignore
ROS2/ros2/src/fibonacci/: CMakeLists.txt  package.xml
ROS2/ros2/src/fibonacci/action/: Fibonacci.action
ROS2/ros2/src/fibonacci/src/: action_client.cpp  action_server.cpp
ReinforceLearning/: setup.py
RustOpenGL/: Cargo.toml
RustOpenGL/rsc/shader/: screen_shader.fs  screen_shader_bloom.fs  screen_shader_bloom.vs  screen_shader_retro_tv.fs  screen_shader_retro_tv.vs  screen_shader_sphere.fs  screen_shader_sphere.vs  shader.fs  shader.vs
RustOpenGL/src/: frame_buffer.rs  image_manager.rs  lib.rs  shader.rs  vertex.rs
RustProgramming/hello/: Cargo.toml  runner.sh
RustProgramming/hello/.cargo/: config
RustProgramming/hello/src/: build.rs  main.rs
RustProgramming/ui_demo/: Cargo.toml
RustProgramming/ui_demo/src/: main.rs
ar_vr_webgl/: .gitignore  package.json  (+3 more)
cuda/: .ccls  .dir-locals.el  CMakeLists.txt
cuda/src/s1/: hello.cpp  hello.cu
cuda/src/s2/: add.cu  cube.cu  detect.cu  detect2.cu  hello2.cu  multiply.cu  square.cu  subtract.cu  vector.cu
cuda/src/s3/: add3.cu  atomic.cu  constant.cu  dot_product.cu  matrix.cu  memory.cu  shared_memory.cu  texture.cu
cuda/src/s4/: event.cu  histogram.cu  rank_sort.cu  stream.cu
(+164 files in other folders)
