[package]
name = "RustOpenGL"
version = "0.1.0"
authors = ["Kitamura <ymyk6602@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sample_opengl"

[[bin]]
name = "sample_imgui"

[dependencies]
sdl2 = "0.34.5"
gl = "0.14.0"
cgmath = "0.18.0"
c_str_macro = "1.0.2"
imgui = "0.7.0"
imgui-sdl2 = "0.14.0"
imgui-opengl-renderer = "0.11.0"
image = "0.23.14"